# prufung

./: README.md
ex_calculator/: CMakeLists.txt  LICENSE  Makefile  README.md  app.cpp  app.hpp  app_test.cpp  calc_ui.cpp  calc_ui.hpp  simple_calculator.cpp  simple_calculator.hpp  simple_calculator_test.cpp
ex_help/: GitCommands.md  Makefile  links.txt  prepare_enviroment.md  wxWidgets_elem_info.sql
ex_help/setup/: CMakeLists.txt  main.cpp
ex_help/testing_cpp/: CMakeLists.txt  add.cpp  getInteger.cpp  main.cpp
ex_help/testing_widget/: CMakeLists.txt  app.h  main_frame.cpp
ex_mythical-game/: LICENSE  README.md  app.cpp  app.hpp  mythical_game.cpp  mythical_game.hpp  unit.cpp  unit.hpp  unit_test.cpp  weapon.cpp  weapon.hpp
ex_mythical-game/images/: COPYING.md
ex_mythical-game/savings/: Drake Burner.md  Dwarvish Fighter.md
ex_notes-schule/: DashboardFrame.cpp  DashboardFrame.hpp  EditNoteFrame.cpp  EditNoteFrame.hpp  LICENSE  README.md  c_cpp_properties.json  notes.db  notiz  test.cpp
ex_tetris-my/: CMakeLists.txt  README.md  adv_tetris_player.cpp  adv_tetris_player.h  board.cpp  board.h  main.cpp  main.h  shape.cpp  shape.h  test_adv_tetris_player.h  test_shape.cpp  test_tetris_player.h  tetris.cpp  tetris.h  tetris_player.cpp  tetris_player.h
ex_ube-widget/: main_frame.cpp  main_frame.h
ex_ube-widget/convert_variable/: main_frame.cpp
ex_ube-widget/event_propagation/: main_frame.cpp  main_frame.h
ex_ube-widget/events_static_handl/: CMakeLists.txt  main_frame.cpp  main_frame.h
ex_ube-widget/keyboard_evt/: main_frame.cpp  main_frame.h
ex_ube-widget/mouse_evt/: app.cpp  main_frame.cpp  main_frame.h
ex_ube-widget/to_do_app/: CMakeLists.txt  app.cpp  app.h  main_frame.cpp  main_frame.h  task.cpp  task.h
ex_ube4/OOP/: catch_error.cpp  constr_default.cpp  constr_default_arg.cpp  construct_asignm.cpp  construct_does_notWork.cpp  construct_overload.cpp  constructor_NO_args.cpp  constructor_init.cpp  constructor_task.cpp  constructor_task2.cpp  destructor.cpp  oop.sql
ex_ube4/OOP/class/: JoeKissKate_struct.cpp  call_memb_func_class.cpp  class1.cpp  joeKissKate_class.cpp  struct1.cpp  task1.cpp  task2.cpp
ex_ube4/OOP/class_mit_class/: class_mit_class.cpp
ex_ube4/containers/: explain.sql  get_vector_length.cpp  pas _vector_by_ref_2.cpp  pass_vector_by_ref_3.cpp  pass_vector_by_refer..cpp  range2.cpp  range_based_loop.cpp  runTime_convert.cpp  static_cast.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5_havy.cpp  task6_maxNum.cpp  temp_arr_loop.cpp  template_func_mit_vector.cpp  vector_for_loop.cpp
ex_ube4/object_oriented/: function_overloading.cpp  obj_oriented.sql
ex_ube4/object_oriented/class_templates/: class_func_templ.cpp  class_templ.sql  class_template_1.cpp  multiple_template_type.cpp
ex_ube4/object_oriented/function_template/: func_templ_3.cpp  function_templ_2.cpp  function_template.cpp  function_templates.cpp
ex_ube4/object_oriented/pass_by_ref_val_adr/: cheap_to_copy.cpp  const.pointer.cpp  pass_by_address.cpp  pass_by_ref_CONST.cpp  pass_by_reference.cpp  pass_by_reference2.cpp  pass_by_value.cpp  pointer_ref_core.cpp
ex_ube4/object_oriented/struct/: .gitignore  returning_struct.cpp  struct_one.cpp
ex_ube4/programs-videos/: 2d_array.cpp  array.cpp  bildauflosung_2d.cpp  bildvearbetung_2d.cpp  calculator.cpp  case_if_do_wh.cpp  case_while_second.cpp  class_obj_1.cpp  class_obj_constr_2.cpp  class_obj_mit_ohne_konst.cpp  class_obj_mit_ohne_konst_2.cpp  do_wh_array.cpp  do_while_loop.cpp  do_while_simple.cpp  expon_for_loop.cpp  find.cpp  function.cpp  function_return_val.cpp  getline_input.cpp  gett_sett_inher_3.cpp  getter_setter_2.cpp  getters_setters.cpp  guessing_num_game.cpp  if_stmt.cpp  if_stmt_comparison.cpp  if_stmt_comparison_2.cpp  increment.cpp  inheritance.cpp  math.cpp  object_function_in_class.cpp  objek_func_array.cpp  pointers.cpp  random_story_teller.cpp  snippets.sql  substring.cpp  user_input.cpp
ex_ube4/programs_two/: doWhileLoop.cpp  eight.cpp  eleventh.cpp  fifteenth.cpp  fifth.cpp  first.cpp  fizBuz.cpp  for_loop.cpp  forth.cpp  fourteenth.cpp  goTo.cpp  intention_while.cpp  namespace.cpp  neunth.cpp  nineth.cpp  numb_generator.cpp  second.cpp  seventh.cpp  sixth.cpp  snipets_two.sql  static_cast.cpp  static_local_var.2cpp  static_local_var.cpp  tenth.cpp  third.cpp  twelfth_runt_compilet.cpp  while_loop.cpp
ex_ube4/saldina/: bascic_for_loop.cpp  basic_for_loop_2.cpp  enum.cpp  enum_iterate.cpp  operator_overload.cpp  operator_overload2.cpp  operator_overload_saldina.cpp  operator_overloading_3.cpp  print_struct1.cpp  print_struct2.cpp  two_structs.cpp
ex_ube4/saldina/core_OOP/: class_instanz_1.cpp  class_instanz_2.cpp  class_instanz_3.cpp  class_instanz_4.cpp  (+4 more)
ex_ube4/simple_tasks/: r_bigger.num.cpp  simple1.cpp
menu_file/: CMakeLists.txt  README.md  app.cpp  app.hpp  main.cpp  mythical_game.cpp  mythical_game.hpp  unit.cpp  unit.hpp  weapon.hpp
nadia_tet_hexCalc/: CMakeLists.txt  README.md  board.cpp  board.hpp  shape.cpp  shape.hpp  tetris.cpp  tetris.hpp
nadia_tet_hexCalc/wx-hex-editor-Izzrina/: App.cpp  LICENSE  MainFrame.cpp  MainFrame.hpp  Makefile  README.md  hex.txt
(+20 files in other folders)
